@@ -115,7 +115,7 @@ if __name__ == '__main__':
     today = time.strftime('%Y%m%d', time.localtime())
 
     def get_arguments(config):
-        parser = OptionParser(version="%prog 1.1.8")
+        parser = OptionParser(version="%prog 1.1.9")
 
         def set_config(option, opt_str, value, parser, config):
             config.set('default', option.dest, value)
